feat: import go-common, remove duplicated codes; update dependency; allow not exists file config; partially change log to zerolog; replace encoding/json with github.com/goccy/go-json; add Aliyun ACR image building targe;

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,7 +1,7 @@
-name: Master Build
+name: Dev Build
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
 
 env:
   APP_NAME: auth_next
@@ -21,11 +21,19 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Aliyun ACR
+        uses: docker/login-action@master
+        with:
+          registry: registry.cn-shanghai.aliyuncs.com
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@master
+        uses: docker/build-push-action@v3
         with:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.APP_NAME }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.APP_NAME }}:master
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.APP_NAME }}:dev
+            registry.cn-shanghai.aliyuncs.com/${{ secrets.ACR_NAMESPACE }}/${{ env.APP_NAME }}:latest
+            registry.cn-shanghai.aliyuncs.com/${{ secrets.ACR_NAMESPACE }}/${{ env.APP_NAME }}:dev
